--- a/style.css
+++ b/style.css
@@ -39,7 +39,9 @@ body{
     color: var(--light-grey);
     font-size: 15px;
     line-height: 24px;
+    margin-bottom: 24px;
 }
+
 .estrela{
     background-color: var(--very-dark-blue);
     width: 48px;
@@ -52,4 +54,23 @@ body{
     border-radius: 50%;
 
     margin-bottom: 30px;
+}
+
+.botoes{
+    display: flex;
+    justify-content: space-between;
+}
+.botoes button{
+    width: 51px;
+    height: 51px;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 24px;
+    border-radius: 50%;
+    border: none;
+    color: var(--mediun-grey);
+    background-color: var(--very-dark-blue);
+}
+.botoes button:hover{
+    
 }
