--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ body{
 .botoes{
     display: flex;
     justify-content: space-between;
+    margin-bottom: 32px;
 }
 .botoes button{
     width: 51px;
@@ -70,7 +71,25 @@ body{
     border: none;
     color: var(--mediun-grey);
     background-color: var(--very-dark-blue);
+    transition: all ease-in-out 0.3s;
 }
 .botoes button:hover{
-    
+    color: var(--white);
+    background-color: var(--orange);
+    cursor: pointer;
+}
+.botoes button:focus {
+    color: var(--white);
+    background-color: var(--light-grey);
+}
+.card > button {
+width: 100%;
+padding: 13px;
+background-color: var(--orange);
+border: none;
+
+font-size: 15px;
+font-weight: 700;
+letter-spacing: 2px;
+color: var(--white);
 }
